@@ -5,7 +5,7 @@ TESTS_ENVIRONMENT = env
 TESTS_ENVIRONMENT += "PATH_POWERMAN=$(top_builddir)/src/powerman"
 TESTS_ENVIRONMENT += "PATH_POWERMAND=$(top_builddir)/src/powermand"
 TESTS_ENVIRONMENT += "PATH_ETC=$(top_builddir)/etc"
-TESTS = t00 t01 t02 t03 t04 t05 t06 t07 t08 t09 t10 t11 t12 t13 t14 t15 t16 t17 t18 t19 t20 t21 t22 t23 t24 t25 t26 t27 t28 t29 t30 t31 t32 t33 t34 t35 t36 t37 t38 t39 t40 t41 t42 t43 t44 t45 t46 t47
+TESTS = t00 t01 t02 t03 t04 t05 t06 t07 t08 t09 t10 t11 t12 t13 t14 t15 t16 t17 t18 t19 t20 t21 t22 t23 t24 t25 t26 t27 t28 t29 t30 t31 t32 t33 t34 t35 t36 t37 t38 t39 t40 t41 t42 t43 t44 t45 t46 t47 t48
 
 CLEANFILES = *.out *.err *.diff
 
@@ -20,7 +20,9 @@ common_sources = \
 	$(top_srcdir)/src/hprintf.c \
 	$(top_srcdir)/src/xregex.c \
 	$(top_srcdir)/src/xmalloc.c \
-	$(top_srcdir)/src/argv.c
+	$(top_srcdir)/src/argv.c \
+	$(top_srcdir)/src/xpoll.c \
+	$(top_srcdir)/src/xpty.c
 
 AM_CFLAGS = -I$(top_srcdir)/src
 
