@@ -1,0 +1,11 @@
+#!/bin/sh
+TEST=t48
+./vpcd -p 10102 &
+sleep 1
+$PATH_POWERMAND -c $TEST.conf -f -R -1 &  
+sleep 1
+$PATH_POWERMAN -h localhost:10103 \
+    -q -Q t1 -Q t[3-5] >$TEST.out 2>$TEST.err
+test $? = 0 || exit 1
+wait; wait
+diff $TEST.out $TEST.exp >$TEST.diff
