@@ -1,0 +1,4 @@
+include "vpc.dev"
+port 10103
+device "test0" "vpc" "localhost:10102"
+node "t[0-15]" "test0"
